<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/rounded_background"
    android:backgroundTint="@color/white">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:contentDescription="@string/preview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="7dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:scaleType="fitXY"
        tools:backgroundTint="@android:color/holo_orange_dark"
        />

    <ImageView
        android:id="@+id/state"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/state"
        app:layout_constraintTop_toTopOf="@+id/preview"
        app:layout_constraintBottom_toBottomOf="@+id/preview"
        app:layout_constraintStart_toStartOf="@+id/preview"
        app:layout_constraintEnd_toEndOf="@+id/preview"
        android:layout_margin="7dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:visibility="gone"
        tools:src="@drawable/play"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/track"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/preview"
        app:layout_constraintBottom_toTopOf="@id/artist"
        app:layout_constraintStart_toEndOf="@+id/preview"
        android:layout_marginStart="7dp"
        android:text="@string/track"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/artist"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/track"
        app:layout_constraintStart_toEndOf="@+id/preview"
        app:layout_constraintBottom_toBottomOf="@id/preview"
        app:layout_constraintEnd_toStartOf=""
        android:layout_marginStart="7dp"
        android:text="@string/artist"
        android:textColor="#777777"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>